[package]
name = "face-cropper"
version = "0.1.0"
edition = "2021"
authors = ["YeongCheon Kim <kyc1682@gmail.com>"]
repository = "https://github.com/YeongCheon/face-cropper"
description = "Face Cropper is a simple Rust command-line application that detects and crops faces from images."
license = "MIT"
license-file = "LICENSE"
keywords = ["face", "machine-learning"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
image = "0.24.6"
indicatif = "0.17.11"
rust-faces = { version = "1.0.0" }
